--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="navbar">
 <a href="contact.html">
-    <button class="my-btn">Contact</button>
+    <button class="btn">Contact</button>
     </a>
 <a href="beats.html">
     <button class="btn">Beats</button>
 </a>
+</div>
 <div class="flexcontainer">
     <div class="container">
     <img src="./S.png" alt="">
