--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="navbar">
-<a href="contact.html">
-    <button class="btn">Contact</button>
-    </a>
-<a href="beats.html">
-    <button class="btn">Beats</button>
-</a>
+<div class="navbar">
+  <ul>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="beats.html">Beats</a></li>
+  </ul>
 </div>
+
 <div class="flexcontainer">
     <div class="container">
     <img src="./S.png" alt="">
