--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-    <title> Home </title>
-    <link rel="stylesheet" href="index.css">
+  <meta charset="UTF-8" />
+  <title>Home</title>
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-<div class="navbar">
-  <ul>
-    <li><a href="contact.html">Contact</a></li>
-    <li><a href="beats.html">Beats</a></li>
-  </ul>
-</div>
+  <div class="navbar">
+    <ul>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="beats.html">Beats</a></li>
+    </ul>
+  </div>
 
 <div class="flexcontainer">
-    <div class="container">
-    <img src="./S.png" alt="">
-    <img src="./Y.png" alt="">
-    <img src="./N.png" alt="">
-    <img src="./1.png" alt="">
-    <img src="./C.png" alt="">
-    <img src="./L.png" alt="">
-    <img src="./E.png" alt="">
+  <img src="./S.png" alt="S" id="letter-S" />
+  <div class="container" id="letter-container">
+    <img src="./Y.png" alt="Y" class="floating-letter" />
+    <img src="./N.png" alt="N" class="floating-letter" />
+    <img src="./1.png" alt="1" class="floating-letter" />
+    <img src="./C.png" alt="C" class="floating-letter" />
+    <img src="./L.png" alt="L" class="floating-letter" />
+    <img src="./E.png" alt="E" class="floating-letter" />
+  </div>
 </div>
-</div>
+
+
+
+  <script src="script.js"></script>
 </body>
+</html>
