--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Home</title>
+  <title>Syn1cle Home</title>
   <link rel="stylesheet" href="index.css" />
 </head>
 <body>
