--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     </ul>
   </div>
 
+<div class="Soundbar">
+  <img src="./BarsTop.png" alt="">
+</div>
+
 <div class="flexcontainer">
   <img src="./S.png" alt="S" id="letter-S" />
   <div class="container" id="letter-container">
