--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     </ul>
   </div>
 
+  <div class="Spotify">
+    <img src="./Spotify_Icon.png" class="SpotifyIcon">
+  </div>
+
 <div class="Soundbar">
   <img src="./BarsTop.png" alt="">
 </div>
@@ -26,9 +30,9 @@
     <img src="./C.png" alt="C" class="floating-letter" />
     <img src="./L.png" alt="L" class="floating-letter" />
     <img src="./E.png" alt="E" class="floating-letter" />
+    
   </div>
 </div>
-
 
 
   <script src="script.js"></script>
