--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     </ul>
   </div>
 
-<div class="Spotify">
-    <img src="./Spotify_Icon.png" class="SpotifyIcon">
-</div>
+<a href="https://open.spotify.com/artist/4rN5suaMVNLNbRpQ879eQA?si=f5d11454b89043a4" target="_blank" class="Spotify">
+  <img src="./Spotify_Icon.png" class="SpotifyIcon" />
+</a>
+
+
+
 
 <div class="Soundbar">
   <img src="./BarsTop.png" alt="">
