--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
     </ul>
   </div>
 
-<a href="https://open.spotify.com/artist/4rN5suaMVNLNbRpQ879eQA?si=f5d11454b89043a4" target="_blank" class="Spotify">
-  <img src="./Spotify_Icon.png" class="SpotifyIcon" />
-</a>
+
+
+<div class="media">
+  <ul>
+    <li>
+      <a href="https://open.spotify.com/artist/4rN5suaMVNLNbRpQ879eQA?si=f5d11454b89043a4" target="_blank" class="Spotify spotify-icon-1"></a>
+    </li>
+    <li>
+      <a href="https://open.spotify.com/artist/4rN5suaMVNLNbRpQ879eQA?si=f5d11454b89043a4" target="_blank" class="Spotify spotify-icon-2"></a>
+    </li>
+  </ul>
+</div>
 
 
 
@@ -25,17 +34,19 @@
 </div>
 
 <div class="flexcontainer">
-  <img src="./S.png" alt="S" id="letter-S" />
+  <img id="letter-S" src="./S.png" alt="Big S" />
   <div class="container" id="letter-container">
+    <img src="./S.png" alt="S" class="floating-letter" />
     <img src="./Y.png" alt="Y" class="floating-letter" />
     <img src="./N.png" alt="N" class="floating-letter" />
     <img src="./1.png" alt="1" class="floating-letter" />
     <img src="./C.png" alt="C" class="floating-letter" />
     <img src="./L.png" alt="L" class="floating-letter" />
     <img src="./E.png" alt="E" class="floating-letter" />
-    
   </div>
 </div>
+
+
 
 
   <script src="script.js"></script>
