--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="https://open.spotify.com/artist/4rN5suaMVNLNbRpQ879eQA?si=f5d11454b89043a4" target="_blank" class="Spotify spotify-icon-1"></a>
     </li>
     <li>
-      <a href="https://open.spotify.com/artist/4rN5suaMVNLNbRpQ879eQA?si=f5d11454b89043a4" target="_blank" class="Spotify spotify-icon-2"></a>
+      <a href="https://www.tiktok.com/@sammi.pedersen" target="_blank" class="Tiktok tiktok-icon-1"></a>
     </li>
   </ul>
 </div>
