--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="navbar">
     <ul>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="beats.html">Beats</a></li>
+      <li><a href="muisc.html">Music</a></li>
     </ul>
   </div>
 
