--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="navbar">
     <ul>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="muisc.html">Music</a></li>
+      <li><a href="music.html">Music</a></li>
     </ul>
   </div>
 
@@ -30,25 +30,25 @@
 
 
 <div class="Soundbar">
-  <img src="./BarsTop.png" alt="">
+  <img src="./images/BarsTop.png" alt="">
 </div>
 
 <div class="flexcontainer">
-  <img id="letter-S" src="./S.png" alt="Big S" />
+  <img id="letter-S" src="./images/S.png" alt="Big S" />
   <div class="container" id="letter-container">
-    <img src="./S.png" alt="S" class="floating-letter" />
-    <img src="./Y.png" alt="Y" class="floating-letter" />
-    <img src="./N.png" alt="N" class="floating-letter" />
-    <img src="./1.png" alt="1" class="floating-letter" />
-    <img src="./C.png" alt="C" class="floating-letter" />
-    <img src="./L.png" alt="L" class="floating-letter" />
-    <img src="./E.png" alt="E" class="floating-letter" />
+    <img src="./images/S.png" alt="S" class="floating-letter" />
+    <img src="./images/Y.png" alt="Y" class="floating-letter" />
+    <img src="./images/N.png" alt="N" class="floating-letter" />
+    <img src="./images/1.png" alt="1" class="floating-letter" />
+    <img src="./images/C.png" alt="C" class="floating-letter" />
+    <img src="./images/L.png" alt="L" class="floating-letter" />
+    <img src="./images/E.png" alt="E" class="floating-letter" />
   </div>
 </div>
 
 
 
 
-  <script src="script.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
