--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <li>
       <a href="https://www.tiktok.com/@sammi.pedersen" target="_blank" class="Tiktok tiktok-icon-1"></a>
     </li>
+
+<li>
+  <a href="https://www.youtube.com/@sammi.pedersen" target="_blank" class="Youtube">
+    <img src="./images/YT_IconUnclear.png" alt="YouTube" class="youtube-img" />
+  </a>
+</li>
   </ul>
 </div>
 
