--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 <div class="Soundbar">
-  <img src="./images/BarsTop.png" alt="">
+  <img class ="Background" src="./images/BarsTop.png" alt="">
 </div>
 
 <div class="flexcontainer">
