--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </li>
 
 <li>
-  <a href="https://www.youtube.com/@sammi.pedersen" target="_blank" class="Youtube">
+  <a href="https://www.youtube.com/@Syn1cle" target="_blank" class="Youtube">
     <img src="./images/YT_IconUnclear.png" alt="YouTube" class="youtube-img" />
   </a>
 </li>
