--- a/music.html
+++ b/music.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-<link rel="stylesheet" href="music.css" /> 
+  <title>Syn1cle Home</title>
+  <link rel="stylesheet" href="music.css" />
+</head>
 <body>
-
-  <h1>Music Previews by Syn1cle</h1>
-
-
-</body>
-</html>
+  <div class="navbar">
+    <ul>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="index.html">Home</a></li>
+    </ul>
+  </div>
