--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <body>
   <div class="navbar">
     <ul>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="music.html">Music</a></li>
+      <li><a href="./index.html" class="active">Home</a></li>
+      <li><a href="./music.html">Music</a></li>
+      <li><a href="./sites/about.html">About</a></li>
+      <li><a href="./sites/contact.html">Contact</a></li>
     </ul>
   </div>
 
