--- a/music.html
+++ b/music.html
@@ -8,7 +8,9 @@
 <body>
   <div class="navbar">
     <ul>
-      <li><a href="contact.html">Contact</a></li>
       <li><a href="index.html">Home</a></li>
+      <li><a href="music.html" class="active">Music</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
