--- a/sites/music.html
+++ b/sites/music.html
@@ -5,11 +5,12 @@
   <title>Syn1cle - Music</title>
   <link rel="icon" type="image/x-icon" href="/images/S.png">
   <link rel="stylesheet" href="/css/music.css" />
+  <link rel="stylesheet" href="/css/navbar.css" />
 </head>
 <body>
   <div class="navbar">
     <ul>
-      <li><a href="/sites/index.html">Home</a></li>
+      <li><a href="/sites/home.html">Home</a></li>
       <li><a href="/sites/music.html" class="active">Music</a></li>
       <li><a href="/sites/about.html">About</a></li>
       <li><a href="/sites/contact.html">Contact</a></li>
