--- a/sites/home.html
+++ b/sites/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Syn1cle - Home</title>
   <link rel="icon" type="image/x-icon" href="/images/S.png">
-  <link rel="stylesheet" href="/css/index.css" />
+  <link rel="stylesheet" href="/css/home.css" />
   <link rel="stylesheet" href="/css/navbar.css" />
 </head>
 <body>
