--- a/sites/home.html
+++ b/sites/home.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8" />
   <title>Syn1cle - Home</title>
   <link rel="icon" type="image/x-icon" href="/images/S.png">
+
+
   <link rel="stylesheet" href="/css/home.css" />
   <link rel="stylesheet" href="/css/navbar.css" />
+  <link rel="stylesheet" href="/css/media.css" />
 </head>
 <body>
   <div class="navbar">
@@ -28,11 +31,11 @@
       <a href="https://www.tiktok.com/@sammi.pedersen" target="_blank" class="Tiktok tiktok-icon-1"></a>
     </li>
 
-<li>
-  <a href="https://www.youtube.com/@Syn1cle" target="_blank" class="Youtube">
-    <img src="/images/YT_IconUnclear.png" alt="YouTube" class="youtube-img" />
-  </a>
-</li>
+    <li>
+      <a href="https://www.youtube.com/@Syn1cle" target="_blank" class="Youtube">
+        <img src="/images/YT_IconUnclear.png" alt="YouTube" class="youtube-img" />
+      </a>
+    </li>
   </ul>
 </div>
 
