--- a/sites/about.html
+++ b/sites/about.html
@@ -3,9 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Syn1cle - Music</title>
-  <link rel="icon" type="image/x-icon" href="/images/S.png">
-
-
+  <link rel="icon" type="image/x-icon" href="./images/S.png">
   <link rel="stylesheet" href="/css/about.css" />
   <link rel="stylesheet" href="/css/navbar.css" />
   <link rel="stylesheet" href="/css/media.css" />
@@ -29,12 +27,11 @@
       <a href="https://www.tiktok.com/@sammi.pedersen" target="_blank" class="Tiktok tiktok-icon-1"></a>
     </li>
 
+    </li>
     <li>
       <a href="https://www.youtube.com/@Syn1cle" target="_blank" class="Youtube">
         <img src="/images/YT_IconUnclear.png" alt="YouTube" class="youtube-img" />
       </a>
     </li>
-  </ul>
 </div>
-
 </body>
