--- a/sites/contact.html
+++ b/sites/contact.html
@@ -29,7 +29,7 @@
 
     </li>
     <li>
-      <a href="https://www.youtube.com/@Syn1cle" target="_blank" class="Youtube">
+      <a href="https://music.youtube.com/channel/UC9EurNLC9bTxi9M1Ofhhf_A" target="_blank" class="Youtube">
         <img src="/images/YT_IconUnclear.png" alt="YouTube" class="youtube-img" />
       </a>
     </li>
