--- a/sites/music.html
+++ b/sites/music.html
@@ -18,6 +18,11 @@
     </ul>
   </div>
 
+<div id="spotify-embeds" class="spotifycontainer"></div>
+
+
+
+
 <div class="media">
   <ul>
     <li>
@@ -34,4 +39,6 @@
       </a>
     </li>
 </div>
+
+  <script src="/js/music.js"></script>
 </body>
