--- a/sites/music.html
+++ b/sites/music.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Syn1cle - Music</title>
   <link rel="icon" type="image/x-icon" href="./images/S.png">
-  <link rel="stylesheet" href="/css/home.css" />
+  <link rel="stylesheet" href="/css/music.css" />
   <link rel="stylesheet" href="/css/navbar.css" />
   <link rel="stylesheet" href="/css/media.css" />
 </head>
