--- a/sites/about.html
+++ b/sites/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Syn1cle - Music</title>
-  <link rel="icon" type="image/x-icon" href="./images/S.png">
+  <link rel="icon" type="image/x-icon" href="/images/S.png">
   <link rel="stylesheet" href="/css/about.css" />
   <link rel="stylesheet" href="/css/navbar.css" />
   <link rel="stylesheet" href="/css/media.css" />
