--- a/sites/contact.html
+++ b/sites/contact.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Syn1cle - Music</title>
-  <link rel="icon" type="image/x-icon" href="./images/S.png">
+  <title>Syn1cle - Contact</title>
+  <link rel="icon" type="image/x-icon" href="/images/S.png">
   <link rel="stylesheet" href="/css/contact.css" />
   <link rel="stylesheet" href="/css/navbar.css" />
   <link rel="stylesheet" href="/css/media.css" />
