--- a/sites/about.html
+++ b/sites/about.html
@@ -9,14 +9,7 @@
   <link rel="stylesheet" href="/css/media.css" />
 </head>
 <body>
-  <div class="navbar">
-    <ul>
-      <li><a href="/sites/home.html">Home</a></li>
-      <li><a href="/sites/music.html">Music</a></li>
-      <li><a href="/sites/about.html" class="active">About</a></li>
-      <li><a href="/sites/contact.html">Contact</a></li>
-    </ul>
-  </div>
+  <div id="navbar"></div>
 
 <div class="media">
   <ul>
@@ -34,4 +27,5 @@
       </a>
     </li>
 </div>
+<script src="/js/navbar-loader.js"></script>
 </body>
