--- a/sites/music.html
+++ b/sites/music.html
@@ -9,14 +9,7 @@
   <link rel="stylesheet" href="/css/media.css" />
 </head>
 <body>
-  <div class="navbar">
-    <ul>
-      <li><a href="/sites/home.html">Home</a></li>
-      <li><a href="/sites/music.html" class="active">Music</a></li>
-      <li><a href="/sites/about.html">About</a></li>
-      <li><a href="/sites/contact.html">Contact</a></li>
-    </ul>
-  </div>
+  <div id="navbar"></div>
 
 <div id="spotify-embeds" class="spotifycontainer"></div>
 
@@ -41,4 +34,5 @@
 </div>
 
   <script src="/js/music.js"></script>
+  <script src="/js/navbar-loader.js"></script>
 </body>
