--- a/sites/contact.html
+++ b/sites/contact.html
@@ -9,15 +9,7 @@
   <link rel="stylesheet" href="/css/media.css" />
 </head>
 <body>
-  <div class="navbar">
-    <ul>
-      <li><a href="/sites/home.html">Home</a></li>
-      <li><a href="/sites/music.html">Music</a></li>
-      <li><a href="/sites/about.html">About</a></li>
-      <li><a href="/sites/contact.html" class="active">Contact</a></li>
-    </ul>
-  </div>
-
+  <div id="navbar"></div>
 <div class="media">
   <ul>
     <li>
@@ -34,4 +26,5 @@
       </a>
     </li>
 </div>
+<script src="/js/navbar-loader.js"></script>
 </body>
