--- a/sites/home.html
+++ b/sites/home.html
@@ -5,20 +5,11 @@
   <title>Syn1cle - Home</title>
   <link rel="icon" type="image/x-icon" href="/images/S.png">
 
-
   <link rel="stylesheet" href="/css/home.css" />
-  <link rel="stylesheet" href="/css/navbar.css" />
   <link rel="stylesheet" href="/css/media.css" />
 </head>
 <body>
-  <div class="navbar">
-    <ul>
-      <li><a href="/sites/home.html" class="active">Home</a></li>
-      <li><a href="/sites/music.html">Music</a></li>
-      <li><a href="/sites/about.html">About</a></li>
-      <li><a href="/sites/contact.html">Contact</a></li>
-    </ul>
-  </div>
+  <div id="navbar"></div>
 
 
 
@@ -63,5 +54,6 @@
 
 
 <script src="/js/home.js"></script>
+<script src="/js/navbar-loader.js"></script>
 </body>
 </html>
