--- a/sites/home.html
+++ b/sites/home.html
@@ -8,28 +8,9 @@
   <link rel="stylesheet" href="/css/home.css" />
   <link rel="stylesheet" href="/css/media.css" />
 </head>
+
 <body>
-  <div id="navbar"></div>
-
-
-
-<div class="media">
-  <ul>
-    <li>
-      <a href="https://open.spotify.com/artist/4rN5suaMVNLNbRpQ879eQA?si=f5d11454b89043a4" target="_blank" class="Spotify spotify-icon-1"></a>
-    </li>
-    <li>
-      <a href="https://www.tiktok.com/@sammi.pedersen" target="_blank" class="Tiktok tiktok-icon-1"></a>
-    </li>
-
-    <li>
-      <a href="https://music.youtube.com/channel/UC9EurNLC9bTxi9M1Ofhhf_A" target="_blank" class="Youtube">
-        <img src="/images/YT_IconUnclear.png" alt="YouTube" class="youtube-img" />
-      </a>
-    </li>
-  </ul>
-</div>
-
+<div id="navbar"></div>
 
 
 
@@ -48,6 +29,9 @@
     <img src="/images/L.png" alt="L" class="floating-letter" />
     <img src="/images/E.png" alt="E" class="floating-letter" />
   </div>
+
+
+  <div id="media">
 </div>
 
 
@@ -55,5 +39,6 @@
 
 <script src="/js/home.js"></script>
 <script src="/js/navbar-loader.js"></script>
+<script src="/js/media-loader.js"></script>
 </body>
 </html>
