--- a/sites/music.html
+++ b/sites/music.html
@@ -23,4 +23,6 @@
 
   <script src="/js/music.js"></script>
   <script src="/js/navbar-loader.js"></script>
+  <script src="/js/media-loader.js"></script>
 </body>
+</html>
