--- a/sites/music.html
+++ b/sites/music.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Syn1cle - Music</title>
-  <link rel="icon" type="image/x-icon" href="/images/S.png">
+  <link rel="icon" type="image/png" href="/images/S.png">
   <link rel="stylesheet" href="/css/music.css" />
   <link rel="stylesheet" href="/css/navbar.css" />
   <link rel="stylesheet" href="/css/media.css" />
@@ -13,16 +13,12 @@
 
 <div id="spotify-embeds" class="spotifycontainer">
 
-  <div id="media">
+<div id="media">
 </div>
 
-
-
-
-
-
-  <script src="/js/music.js"></script>
-  <script src="/js/navbar-loader.js"></script>
-  <script src="/js/media-loader.js"></script>
+</div>
+  <script src="/js/music.js" defer></script>
+  <script src="/js/navbar-loader.js" defer></script>
+  <script src="/js/media-loader.js" defer></script>
 </body>
 </html>
