--- a/sites/about.html
+++ b/sites/about.html
@@ -2,18 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Syn1cle - Music</title>
-  <link rel="icon" type="image/x-icon" href="/images/S.png">
+  <title>Syn1cle - About</title>
+  <link rel="icon" type="image/png" href="/images/S.png">
   <link rel="stylesheet" href="/css/about.css" />
   <link rel="stylesheet" href="/css/navbar.css" />
   <link rel="stylesheet" href="/css/media.css" />
 </head>
 <body>
   <div id="navbar"></div>
-  <div id="media"></div>
 
+<div id="spotify-embeds" class="spotifycontainer">
 
-<script src="/js/navbar-loader.js"></script>
-  <script src="/js/media-loader.js"></script>
+<div id="media">
+</div>
+
+</div>
+  <script src="/js/about.js" defer></script>
+  <script src="/js/navbar-loader.js" defer></script>
+  <script src="/js/media-loader.js" defer></script>
 </body>
 </html>
