--- a/sites/contact.html
+++ b/sites/contact.html
@@ -3,15 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <title>Syn1cle - Contact</title>
-  <link rel="icon" type="image/x-icon" href="/images/S.png">
+  <link rel="icon" type="image/png" href="/images/S.png">
   <link rel="stylesheet" href="/css/contact.css" />
   <link rel="stylesheet" href="/css/navbar.css" />
   <link rel="stylesheet" href="/css/media.css" />
 </head>
 <body>
   <div id="navbar"></div>
-  <div id="media"></div>
-<script src="/js/navbar-loader.js"></script>
-<script src="/js/media-loader.js"></script>
+
+<div id="spotify-embeds" class="spotifycontainer">
+
+<div id="media">
+</div>
+
+</div>
+  <script src="/js/contact.js" defer></script>
+  <script src="/js/navbar-loader.js" defer></script>
+  <script src="/js/media-loader.js" defer></script>
 </body>
 </html>
