--- a/sites/home.html
+++ b/sites/home.html
@@ -3,22 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <title>Syn1cle - Home</title>
-  <link rel="icon" type="image/x-icon" href="/images/S.png">
-
+  <link rel="icon" type="image/png" href="/images/S.png">
   <link rel="stylesheet" href="/css/home.css" />
+  <link rel="stylesheet" href="/css/navbar.css" />
   <link rel="stylesheet" href="/css/media.css" />
 </head>
-
 <body>
-<div id="navbar"></div>
+  <div id="navbar"></div>
 
-
-
-<div class="Soundbar">
+  <div class="Soundbar">
   <img class ="Background" src="/images/BarsTop.png" alt="">
 </div>
 
-<div class="flexcontainer">
+  <div class="flexcontainer">
   <img id="letter-S" src="/images/S.png" alt="Big S" />
   <div class="container" id="letter-container">
     <img src="/images/S.png" alt="S" class="floating-letter" />
@@ -30,15 +27,12 @@
     <img src="/images/E.png" alt="E" class="floating-letter" />
   </div>
 
-
   <div id="media">
 </div>
 
-
-
-
-<script src="/js/home.js"></script>
-<script src="/js/navbar-loader.js"></script>
-<script src="/js/media-loader.js"></script>
+</div>
+  <script src="/js/home.js" defer></script>
+  <script src="/js/navbar-loader.js" defer></script>
+  <script src="/js/media-loader.js" defer></script>
 </body>
 </html>
