--- a/sites/home.html
+++ b/sites/home.html
@@ -7,15 +7,15 @@
 
   <link rel="stylesheet" href="/css/home.css" />
   <link rel="stylesheet" href="/css/media.css" />
+  <link rel="stylesheet" href="/css/SoundBarsTop.css" />
+
 </head>
 
 <body>
 
 
 
-<div class="Soundbar">
-  <img class ="Background" src="/images/BarsTop.png" alt="">
-</div>
+
 
 <div class="flexcontainer">
   <img id="letter-S" src="/images/S.png" alt="Big S" />
@@ -28,12 +28,10 @@
     <img src="/images/L.png" alt="L" class="floating-letter" />
     <img src="/images/E.png" alt="E" class="floating-letter" />
   </div>
-
 </div>
 
-
-
-
+  <div id="SoundBar"></div>
+  <script src="/js/SoundBarsTop.js"></script>
 <script src="/js/home.js"></script>
 </body>
 </html>
