--- a/sites/music.html
+++ b/sites/music.html
@@ -7,14 +7,16 @@
   <link rel="stylesheet" href="/css/music.css" />
   <link rel="stylesheet" href="/css/navbar.css" />
   <link rel="stylesheet" href="/css/media.css" />
+  <link rel="stylesheet" href="/css/SoundBarsBot.css" />
+
 </head>
 <body>
 
-<div id="spotify-embeds" class="spotifycontainer">
+<div id="spotify-embeds" class="spotifycontainer"></div>
 
-</div>
 
-</div>
+  <div id="SoundBar"></div>
+  <script src="/js/SoundBarsBot.js"></script>
   <script src="/js/music.js" defer></script>
 </body>
 </html>
