--- a/elements/navbar.html
+++ b/elements/navbar.html
@@ -1,9 +1,10 @@
   <link rel="stylesheet" href="/css/navbar.css" />
-  <div class="navbar">
-    <ul>
-      <li><a href="/sites/home.html">Home</a></li>
-      <li><a href="/sites/music.html">Music</a></li>
-      <li><a href="/sites/about.html">About</a></li>
-      <li><a href="/sites/contact.html">Contact</a></li>
-    </ul>
-  </div>
+<div class="navbar">
+  <ul>
+    <li><a href="#" data-target="0">Home</a></li>
+    <li><a href="#" data-target="1">Music</a></li>
+    <li><a href="#" data-target="2">About</a></li>
+    <li><a href="#" data-target="3">Contact</a></li>
+  </ul>
+</div>
+
