--- a/sites/view.html
+++ b/sites/view.html
@@ -6,10 +6,17 @@
   <title>Syn1cle</title>
   <link rel="stylesheet" href="/css/navbar.css" />
   <link rel="stylesheet" href="/css/view.css" />
+  <link rel="stylesheet" href="/css/loading.css" />
   <style>
   </style>
 </head>
 <body>
+
+<div id="loading-overlay">
+  <div id="equalizer"></div>
+</div>
+
+
   <div id="navbar"></div>
 
   <iframe src="/sites/home.html" title="Home"></iframe>
@@ -18,5 +25,6 @@
   <iframe src="/sites/contact.html" title="Contact"></iframe>
 
   <script src="/js/navbar-loader.js" defer></script>
+  <script src="/js/loading.js" defer></script>
 </body>
 </html>
