--- a/sites/about.html
+++ b/sites/about.html
@@ -9,12 +9,8 @@
   <link rel="stylesheet" href="/css/media.css" />
 </head>
 <body>
+  <div id="spotify-embeds" class="spotifycontainer"></div>
 
-<div id="spotify-embeds" class="spotifycontainer">
-
-</div>
-
-</div>
   <script src="/js/about.js" defer></script>
 </body>
 </html>
