--- a/sites/contact.html
+++ b/sites/contact.html
@@ -9,13 +9,12 @@
   <link rel="stylesheet" href="/css/media.css" />
 </head>
 <body>
+  <div id="spotify-embeds" class="spotifycontainer"></div>
 
-<div id="spotify-embeds" class="spotifycontainer">
 
-<div id="media">
-</div>
+  <div id="media"></div>
 
-</div>
+
   <script src="/js/contact.js" defer></script>
   <script src="/js/media-loader.js" defer></script>
 </body>
